--- a/ide/ui/ide-all/pom.xml
+++ b/ide/ui/ide-all/pom.xml
@@ -99,5 +99,10 @@
 		 	<artifactId>dirigible-ide-ui-schema</artifactId>
 		 	<version>3.2.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-ide-ui-entity</artifactId>
+		 	<version>3.2.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
