--- a/pom.xml
+++ b/pom.xml
@@ -405,6 +405,7 @@
 		<module>releng/sap-all</module>
 		<module>releng/server-all</module>
 		<module>releng/server-runtime</module>
+		<module>releng/trial-all</module>
 	</modules>
 
 </project>
