h2 database module added as a replacement of derby as default

--- a/modules/database/pom.xml
+++ b/modules/database/pom.xml
@@ -23,6 +23,7 @@
 		<module>database-managed</module>
 		<module>database-persistence</module>
 		<module>database-sql</module>
+		<module>database-h2</module>
 	</modules>
 
 </project>
