--- a/modules/database/database-all/pom.xml
+++ b/modules/database/database-all/pom.xml
@@ -50,9 +50,14 @@
             <artifactId>dirigible-database-data-structures</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-database-derby</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency> -->
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-h2</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
