Velocity template engine added as an alternative for more complex cases

--- a/ide/services/pom.xml
+++ b/ide/services/pom.xml
@@ -25,5 +25,6 @@
 		<module>ide-workspaces</module>
 		<module>ide-bpm</module>
 		<module>ide-generation-mustache</module>
+		<module>ide-generation-velocity</module>
 	</modules>
 </project>
