--- a/ide/services/ide-all/pom.xml
+++ b/ide/services/ide-all/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>dirigible-ide-service-generation-mustache</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-ide-service-generation-velocity</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
