--- a/templates/template-all/pom.xml
+++ b/templates/template-all/pom.xml
@@ -90,5 +90,10 @@
 		 	<artifactId>dirigible-template-application-angular</artifactId>
 		 	<version>3.2.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-template-application-openui5</artifactId>
+		 	<version>3.2.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
