Updates application template (AngularJS)

--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/shell/menu.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/shell/menu.js.template
@@ -12,7 +12,7 @@ var extensions = require('core/v3/extensions');
 var response = require('http/v3/response');
 
 var mainmenu = [];
-var menuExtensions = extensions.getExtensions('shell-{{extensionName}}-menu');
+var menuExtensions = extensions.getExtensions('shell-{{projectName}}-menu');
 for (var i=0; i< menuExtensions.length; i++) {
     var menuExtension = require(menuExtensions[i]);
     var menu = menuExtension.getMenu();
