--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/shell/views.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/shell/views.js.template
@@ -12,7 +12,7 @@ var extensions = require('core/v3/extensions');
 var response = require('http/v3/response');
 
 var views = [];
-var viewExtensions = extensions.getExtensions('shell-{{extensionName}}-view');
+var viewExtensions = extensions.getExtensions('shell-{{projectName}}-view');
 for (var i=0; i<viewExtensions.length; i++) {
     var viewExtension = require(viewExtensions[i]);
     var view = viewExtension.getView();
