--- a/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
@@ -16,7 +16,7 @@
                         "identity": "{{dataAutoIncrement}}",
                         "precision": "{{dataPrecision}}",
                         "scale": "{{dataScale}}"
-                    },
+                    }{{^last}},{{/last}}
                 {{/properties}}
                 ]
             },
