--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/view/application.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/view/application.extension.template
@@ -1,5 +1,5 @@
 {
 	'description': '{{name}} view',
-	'extensionPoint': 'shell-{{extensionName}}-view',
+	'extensionPoint': 'shell-{{projectName}}-view',
 	'module': '{{projectName}}/extensions/view/{{name}}.js'
 }
