--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/perspective/application.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/perspective/application.extension.template
@@ -1,5 +1,5 @@
 {
 	'description': '{{name}} perspective',
 	'extensionPoint': 'shell-{{extensionName}}-perspective',
-	'module': '{{projectName}}/extensions/perspective/{{name}}.js'
+	'module': '{{projectName}}/extensions/perspective/home.js'
 }
