--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/shell/tmpl/menu.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/shell/tmpl/menu.html.template
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container-flex">
 		<p class="navbar-brand" style="font-family: Trebuchet MS" href="#">
-			<i class="fa fa-cloud"></i>&nbsp;{{brand}}
+			<i class="fa fa-cloud"></i>&nbsp;[[brand]]
 		</p>
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
