--- a/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
@@ -7,7 +7,7 @@
                 "type": "TABLE",
                 "columns": 
                 [
-                {{#properties_}}
+                {{#value.properties_}}
                     {
                         "name": "{{value.dataName}}",
                         "type": "{{value.dataType}}",
@@ -17,7 +17,7 @@
                         "precision": "{{value.dataPrecision}}",
                         "scale": "{{value.dataScale}}"
                     }{{^last}},{{/last}}
-                {{/properties_}}
+                {{/value.properties_}}
                 ]
             }{{^last}},{{/last}}
         {{/dataModels_}}
