--- a/templates/template-application-openui5/src/main/resources/template-application-openui5/ui/view/AddEditDialog.fragment.xml.template
+++ b/templates/template-application-openui5/src/main/resources/template-application-openui5/ui/view/AddEditDialog.fragment.xml.template
@@ -3,21 +3,15 @@
 		xmlns:l="sap.ui.layout"
 		xmlns:core="sap.ui.core">
 	<Dialog
-			title="Settings"
+			title="Manage data"
 			class="sapUiPopupWithPadding"
-			contentWidth="350px"
-			id="AppSettingsDialog">
+			contentWidth="350px">
 		<content>
 			<VBox class="sapUiTinyMarginTop">
-					<Label text="Name:"/>
-					<Input placeholder="Enter name" value="{dialog>/name}"/>
-
-					<Label text="Description:"/>
-					<Input placeholder="Enter description" value="{dialog>/description}"/>
-					
-					<Label text="Price:"/>
-					<Input placeholder="Enter price" value="{dialog>/price}" type="Number"/>
-
+				[[#properties]]
+				<Label text="[[widgetLabel]]:"/>
+				<Input value="{dialog>/[[name]]}"/>
+				[[/properties]]
 			</VBox>
 		</content>
 		<beginButton>
