--- a/templates/template-application-openui5/src/main/resources/template-application-openui5/ui/model/modules.json.template
+++ b/templates/template-application-openui5/src/main/resources/template-application-openui5/ui/model/modules.json.template
@@ -1,31 +1,9 @@
-{
-	"navigation":[{
-		"title":"Products",
-		"icon":"sap-icon://employee",
-		"expanded":true,
-		"key":"root1",
-		"items":[{
-			"title":"Products",
-			"key":"page1"
-		}, {
-			"title":"Recepies",
-			"key":"page2"
-		}]
-	}, {
-		"title":"Staff",
-		"icon":"sap-icon://building",
-		"key":"root2"
-	}],
-	"fixedNavigation":[{
-		"title":"Fixed Item 1",
-		"icon":"sap-icon://employee"
-	}, {
-		"title":"Fixed Item 2",
-		"icon":"sap-icon://building"
-	}],
-	"headerItems":[{
-		"text":"File"
-	}, {
-		"text":"Didi"
-	}]
-}
+[{
+	"name" : "veui5",
+	"icon" : "sap-icon://building",
+	"url" : "http://veui5infra.dhcp.wdf.sap.corp:8080/demokit/#/sample/sap.tnt.sample.ToolPage/preview"
+}, {
+	"name" : "again veui5",
+	"icon" : "sap-icon://employee",
+	"url" : "http://google.com"
+} ]
