--- a/modules/database/database-all/pom.xml
+++ b/modules/database/database-all/pom.xml
@@ -37,32 +37,12 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-database-custom</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-database-data-models</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-database-data-structures</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
-        </dependency>
-        <!-- <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-database-derby</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
-        </dependency> -->
-        <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-database-h2</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-database-managed</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -75,6 +55,30 @@
             <artifactId>dirigible-database-sql</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- Database Implementations -->
+        <!-- 
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-custom</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-h2</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-derby</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-managed</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
+        -->
     </dependencies>
 
 </project>
