--- a/releng/trial-all/pom.xml
+++ b/releng/trial-all/pom.xml
@@ -231,12 +231,11 @@
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-repository</artifactId>
 		 	<version>3.2.0-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.eclipse.dirigible</groupId>
-					<artifactId>dirigible-repository-database</artifactId>
-				</exclusion>
-			</exclusions>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-repository-local</artifactId>
+		 	<version>3.2.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Database -->
@@ -244,16 +243,11 @@
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-database</artifactId>
 		 	<version>3.2.0-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.eclipse.dirigible</groupId>
-					<artifactId>dirigible-database-custom</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.eclipse.dirigible</groupId>
-					<artifactId>dirigible-database-managed</artifactId>
-				</exclusion>
-			</exclusions>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-database-h2</artifactId>
+		 	<version>3.2.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Core Services -->
@@ -275,6 +269,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-service-anonymous</artifactId>
+		 	<version>3.2.0-SNAPSHOT</version>
+		 </dependency>
 
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
@@ -285,14 +284,13 @@
 		<!-- CMS -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-cms</artifactId>
+		 	<artifactId>dirigible-cms-api</artifactId>
 		 	<version>3.2.0-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.eclipse.dirigible</groupId>
-					<artifactId>dirigible-cms-managed</artifactId>
-				</exclusion>
-			</exclusions>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-cms-internal</artifactId>
+		 	<version>3.2.0-SNAPSHOT</version>
 		</dependency>
 		
 		<!-- BPM -->
