--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/manage/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/manage/index.html.template
@@ -17,7 +17,7 @@
 		<h1>Manage [[name]]</h1>
 	</div>
 	<div class="container">
-		<button type="button" ng-click="new()" class="btn btn-lg btn-primary pull-right">New</button>
+		<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-primary pull-right">New</button>
 		<table class="table product-table">
 			<thead>
 				<tr>
@@ -34,7 +34,10 @@
 					[[#properties]]
 					<td>{{next.[[name]]}}</td>
 					[[/properties]]
-					<td ng-click="update(next)"><i class="close fa fa-pencil"></i></td>
+					<td>
+						<i class="close fa fa-2x fa-remove" ng-click="openDeleteDialog(next)"></i>
+						<i class="close fa fa-2x fa-pencil" ng-click="openEditDialog(next)" style="margin-right: 0.5em"></i>
+					</td>
 				</tr>
 			</tbody>
 		</table>
@@ -59,6 +62,35 @@
 		</nav>
 	</div>
 
+	<div class="modal fade" id="entityModal" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form>
+						[[#properties]]
+						<div class="form-group">
+							<label>[[widgetLabel]]</label>
+							<input type="[[widgetType]]" class="form-control" placeholder="Enter [[widgetLabel]]" ng-model="entity.[[name]]">
+						</div>
+						[[/properties]]
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" ng-show="actionType === 'new'" ng-click="create()">Save</button>
+					<button type="button" class="btn btn-primary" ng-show="actionType === 'update'" ng-click="update()">Update</button>
+					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
 	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
@@ -78,13 +110,60 @@
 			}
 			load();
 
-			$scope.new = function() {
-				alert('New clicked!');
+			$scope.openNewDialog = function() {
+				$scope.actionType = 'new';
+				$scope.entity = {};
+				toggleEntityModal();
 			};
 
-			$scope.update = function(entity) {
-				alert('Edit clicked for: ' + JSON.stringify(entity));
+			$scope.openEditDialog = function(entity) {
+				$scope.actionType = 'update';
+				$scope.entity = entity;
+				toggleEntityModal();
 			};
+
+			$scope.openDeleteDialog = function(entity) {
+				toggleDeleteModal();
+			};
+
+			$scope.create = function() {
+				$http.post(api, JSON.stringify($scope.entity))
+				.success(function(data) {
+					load();
+					toggleEntityModal();
+				}).error(function(data) {
+					alert(JSON.stringify(data));
+				});
+					
+			};
+
+			$scope.update = function() {
+				$http.put(api, JSON.stringify($scope.entity))
+				.success(function(data) {
+					load();
+					toggleEntityModal();
+				}).error(function(data) {
+					alert(JSON.stringify(data));
+				})
+			};
+
+			$scope.delete = function() {
+				$http.delete(api)
+				.success(function(data) {
+					load();
+					toggleDeleteModal();
+				}).error(function(data) {
+					alert(JSON.stringify(data));
+				});
+			};
+
+			function toggleEntityModal() {
+				$('#entityModal').modal('toggle');
+			}
+
+			function toggleDeleteModal() {
+				$('#deleteModal').modal('toggle');
+			}
   	  });
 	</script>
 </body>
